base/cluster/block_syncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block-syncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block-syncer
  template:
    metadata:
      labels:
        app: block-syncer
    spec:
      containers:
      - name: block-syncer
        image: ghcr.io/bnb-chain/greenfield-storage-provider:block-syncer-dev-env-latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9833
            name: block-syncer
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config-block-syncer
