base/cluster/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.3
        # command: ['/bin/bash', '-c', "/app/gnfd-sp --log.std config.remote -server manager 2>&1 &"]
        args: ["--log.std", "--configremote", "-server", "manager"]
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
      - name: image-pull
      volumes:
      - name: config
        configMap:
          name: config
