base/cluster/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.3
        args: ["--log.std", "-c", "/config/config.toml", "-server", "gateway"]
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9033
            name: gateway
          - containerPort: 24036
            name: metrics
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
  - port: 9033
    targetPort: 9033
    name: gateway
  - port: 24036
    targetPort: 24036
    name: metrics
  selector:
    app: gateway
