base/cluster/metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
    spec:
      serviceAccountName: nodereal-default
      containers:
      - name: metadata
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.3
        args: ["--log.std", "-c", "/config/config.toml", "-server", "metadata"]
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9833
            name: metadata
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  name: metadata
spec:
  ports:
  - port: 9833
    targetPort: 9833
    name: metadata
  selector:
    app: metadata
