base/cluster/stonehub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stonehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stonehub
  template:
    metadata:
      labels:
        app: stonehub
    spec:
      containers:
      - name: stonehub
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9333
            name: stonehub
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
      - name: image-pull
      volumes:
      - name: config
        configMap:
          name: config-stonehub
---
apiVersion: v1
kind: Service
metadata:
  name: stonehub
spec:
  ports:
  - port: 9333
    targetPort: 9333
    name: stonehub
  selector:
    app: stonehub
