base/cluster/syncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: syncer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: syncer
    spec:
      serviceAccountName: default
      containers:
      - name: syncer
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.3
        imagePullPolicy: Always
        args: ["--log.std", "-c", "/config/config.toml", "-server", "receiver"]
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
          - containerPort: 9533
            name: syncer
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  name: syncer
spec:
  ports:
  - port: 9533
    targetPort: 9533
    name: syncer
  selector:
    app: syncer
