base/cluster/uploader_downloader_challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-downloader-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-downloader-challenge
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uploader-downloader-challenge
    spec:
      containers:
      - name: uploader-downloader-challenge
        image: ghcr.io/bnb-chain/greenfield-storage-provider:0.0.3
        imagePullPolicy: Always
        args: ["--log.std", "-c", "/config/config.toml", "-server", "uploader,downloader,challenge"]
        resources:
          limits:
            cpu: "3"
            memory: 12Gi
          requests:
            cpu: "2"
            memory: 8Gi
        ports:
          - containerPort: 9133
            name: uploader
          - containerPort: 9233
            name: downloader
          - containerPort: 9333
            name: challenge
        volumeMounts:
        - mountPath: /config
          name: config
      imagePullSecrets:
        - name: image-pull
      volumes:
        - name: config
          configMap:
            name: config-uploader-downloader-challenge
---
apiVersion: v1
kind: Service
metadata:
  name: uploader
spec:
  ports:
  - port: 9133
    targetPort: 9133
    name: uploader
  selector:
    app: uploader-downloader-challenge
---
apiVersion: v1
kind: Service
metadata:
  name: downloader
spec:
  ports:
  - port: 9233
    targetPort: 9233
    name: downloader
  selector:
    app: uploader-downloader-challenge
---
apiVersion: v1
kind: Service
metadata:
  name: challenge
spec:
  ports:
  - port: 9333
    targetPort: 9333
    name: challenge
  selector:
    app: uploader-downloader-challenge
